2014-11-03  Joseph Pecoraro  <pecoraro@apple.com>

        Web Inspector: TextEditor search doesn't work after editing contents
        https://bugs.webkit.org/show_bug.cgi?id=138198

        Reviewed by Timothy Hatcher.

        * UserInterface/Views/SourceCodeTextEditor.js:
        (WebInspector.SourceCodeTextEditor.prototype.customPerformSearch):
        Fallback to pure TextEditor content searching (CodeMirror) if the editor has edits.

        * UserInterface/Views/TextEditor.js:
        (WebInspector.TextEditor.prototype.hasEdits):
        Check the CodeMirror clean state to known if we have edits or not.

2014-11-03  Joseph Pecoraro  <pecoraro@apple.com>

        Web Inspector: Show Selector's Specificity
        https://bugs.webkit.org/show_bug.cgi?id=138189

        Reviewed by Timothy Hatcher.

        * Localizations/en.lproj/localizedStrings.js:
        * UserInterface/Main.html:
        * UserInterface/Test.html:
        Add new files and strings.

        * UserInterface/Models/CSSMedia.js:
        Constructor functions are not needed, remove unnecessary code.

        * UserInterface/Models/CSSRule.js:
        (WebInspector.CSSRule.prototype.set selectors): Deleted.
        This was unused and is no longer correct.

        (WebInspector.CSSRule.prototype.get matchedSelectorText):
        Update now that selectors are a list of objects, not just strings.

        * UserInterface/Models/CSSSelector.js:
        (WebInspector.CSSSelector):
        (WebInspector.CSSSelector.prototype.get specificity):
        New model object for protocol type CSS.CSSSelector.

        * UserInterface/Models/DOMNodeStyles.js:
        (WebInspector.DOMNodeStyles.prototype._parseSelectorListPayload.return):
        (WebInspector.DOMNodeStyles.prototype._parseSelectorListPayload):
        (WebInspector.DOMNodeStyles.prototype._parseRulePayload):
        Handle parsing old and new SelectorLists.

        * UserInterface/Views/CSSStyleDeclarationSection.js: