@@ -1,3 +1,14 @@
+2014-11-04  Joseph Pecoraro  <pecoraro@apple.com>
+
+        Web Inspector: Uncaught Exceptions when paused and hovering JavaScript without CallFrames
+        https://bugs.webkit.org/show_bug.cgi?id=138338
+
+        Reviewed by Geoffrey Garen.
+
+        * UserInterface/Views/SourceCodeTextEditor.js:
+        (WebInspector.SourceCodeTextEditor.prototype._tokenTrackingControllerHighlightedJavaScriptExpression):
+        Fallback to using the main page's context if there is no active call frame we can use.
+
 2014-11-03  Joseph Pecoraro  <pecoraro@apple.com>
 
         Web Inspector: TextEditor search doesn't work after editing contents
